change hover effect on hamburger

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -6,6 +6,7 @@
 
   /* Colors */
   --clr-black: #141115;
+  --clr-brown: #2B242D;
   --clr-white: #F4EDED;
   --clr-green-dark: #254A4A;
   --clr-green-light: #36827F;
