--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -12,6 +12,8 @@
   --clr-green-light: #36827F;
   --clr-purple: #A288A6;
   --clr-yellow: #F9DB6D;
+  --clr-orange-light: #F46036;
+  --clr-orange-dark: #D5370B;
 
   /* Units */
   --nav-height: 80px;
