increase luminance on orange-dark

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -13,7 +13,7 @@
   --clr-purple: #A288A6;
   --clr-yellow: #F9DB6D;
   --clr-orange-light: #F46036;
-  --clr-orange-dark: #D5370B;
+  --clr-orange-dark: #E93C0C;
 
   /* Units */
   --nav-height: 80px;
