--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -15,13 +15,13 @@
   font-weight: 400;
   color: var(--clr-orange-light);
 
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
 
 .hero-intro:hover {
-  color: var(--clr-orange-dark)
+  color: var(--clr-orange-dark);
 }
 
 .hero-header {
@@ -41,14 +41,14 @@
   /* background-color: var(--clr-orange-light); */
   border: 1px solid var(--clr-orange-light);
   border-radius: 25px;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 
   font-size: 1.2rem;
   color: var(--clr-orange-light);
 
   display: flex;
 
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
 
 .hero-cta:hover {
@@ -64,7 +64,7 @@
   width: 0px;
   color: var(--clr-orange-light);
 
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
 
 .hero-cta:hover > .hero-cta-arrow {
@@ -80,7 +80,7 @@
   .hero-intro {
     font-size: 7vmin;
 
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
 
   .hero-header {
@@ -88,7 +88,7 @@
 
     max-width: 250px;
 
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
 
   .hero-presentation {
@@ -96,13 +96,13 @@
 
     max-width: 350px;
 
-    margin: .5rem 0 2rem;
+    margin: 0.5rem 0 2rem;
   }
 
   .hero-cta {
     font-size: 5vmin;
 
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
   }
 
   .hero-cta-arrow {
