--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -56,10 +56,10 @@
   color: var(--clr-orange-dark);
 }
 
-.hero-cta-arrow {
+.hero-cta-arrow-container {
   overflow: hidden;
 
-  transform: translateY(-1.5px);
+  transform: translateY(-2px);
 
   width: 0px;
   color: var(--clr-orange-light);
@@ -67,7 +67,11 @@
   transition: all 0.2s ease;
 }
 
-.hero-cta:hover > .hero-cta-arrow {
+.hero-cta-arrow {
+  font-size: 0.8rem;
+}
+
+.hero-cta:hover > .hero-cta-arrow-container {
   color: var(--clr-orange-dark);
   width: 18px;
 }
@@ -105,7 +109,7 @@
     padding: 0.5rem 1rem;
   }
 
-  .hero-cta-arrow {
+  .hero-cta-arrow-container {
     width: 18px;
   }
 }
