--- a/src/styles/emailform.css
+++ b/src/styles/emailform.css
@@ -1,11 +1,13 @@
+@import './constants.css';
+
 .form-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 
   width: 100%;
-  height: 100vh;
-  min-height: 650px;
+  height: 100%;
+  /* min-height: 650px; */
 }
 
 .form-content {
@@ -13,31 +15,34 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  width: 70%;
 }
 
 .form-h1 {
-  margin-bottom: 0.5rem;
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .input-text,
 .input-msg,
-.input-validation {
+.input-calculate {
   width: 100%;
   min-width: 200px;
   max-width: 400px;
-  padding-left: 0.2rem;
+  padding-left: 0.25rem;
 
   margin: 0.75rem 0;
 
-  font-family: sans-serif;
-  font-weight: lighter;
+  font-weight: 200;
   letter-spacing: 1px;
+
+  border: none;
+  border-radius: 5px;
+
+  outline: none;
 }
 
 .input-text,
-.input-validation {
+.input-calculate {
   height: 2rem;
 }
 
@@ -48,7 +53,7 @@
   overflow-wrap: break-word;
 }
 
-.input-validation {
+.input-calculate {
   margin-bottom: 0.25rem;
 }
 
@@ -58,16 +63,51 @@
   padding: 0.5rem 1rem;
 
   cursor: pointer;
+
+  background-color: var(--clr-green-light);
+  border: none;
+  border-radius: 25px;
+
+  transition: all 0.15s ease;
 }
 
-.form-validate-desc {
-  font-family: sans-serif !important;
+.input-submit:hover {
+  transform: scale(1.08);
+}
+
+.input-submit:disabled {
+  background-color: var(--clr-green-dark);
+}
+
+.form-validation-info {
   font-size: 0.7rem;
+  font-weight: 400;
   color: rgb(150, 150, 150);
 
   width: 100%;
   min-width: 200px;
   max-width: 400px;
 
-  margin: 0 0 0.75rem 0;
+  margin: 0.25rem 0 0.75rem 0;
+}
+
+@media screen and (max-width: 425px) {
+  .form-content {
+    padding: 0 1rem;
+  }
+
+  .input-text,
+  .input-calculate {
+    height: 1.5rem;
+  }
+
+  .input-text,
+  .input-msg,
+  .input-calculate {
+    margin: 0.5rem 0;
+  }
+
+  .input-submit {
+    margin-top: 0.5rem;
+  }
 }
