--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -68,7 +68,7 @@
 
   color: var(--clr-white);
 
-  transition: all .15s ease;
+  transition: all 0.15s ease;
 }
 
 .nav-lang-btn:hover {
@@ -94,7 +94,7 @@
 
   margin: 0 1vmax;
 
-  transition: all .15s ease;
+  transition: all 0.15s ease;
 }
 
 .hamburger-btn:hover {
@@ -103,49 +103,31 @@
 
 @keyframes bouncy {
   0% {
-    transform:
-    scale(1)
-    translateX(0)
-    ;
+    transform: scale(1) translateX(0);
   }
   5% {
-    transform: scale(1.15)
-    translateX(15%)
-    ;
+    transform: scale(1.15) translateX(15%);
   }
   10% {
-    transform: scale(.85)
-    translateX(-15%)
-    ;
+    transform: scale(0.85) translateX(-15%);
   }
   20% {
-    transform: scale(1.1)
-    translateX(10%)
-    ;
+    transform: scale(1.1) translateX(10%);
   }
   30% {
-    transform: scale(.9)
-    translateX(-10%)
-    ;
+    transform: scale(0.9) translateX(-10%);
   }
   40% {
-    transform: scale(1.05)
-    translateX(5%)
-    ;
+    transform: scale(1.05) translateX(5%);
   }
   50% {
-    transform: scale(.95)
-    translateX(-5%)
-    ;
+    transform: scale(0.95) translateX(-5%);
   }
   65% {
-    transform: scale(1.02)
-    translateX(2%)
-    ;
+    transform: scale(1.02) translateX(2%);
   }
   85% {
-    transform: scale(.98)
-    translateX(-2%);
+    transform: scale(0.98) translateX(-2%);
   }
 }
 
@@ -158,7 +140,7 @@
   width: 30px;
   height: 4px;
 
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
 
 .bar-top {
@@ -196,7 +178,7 @@
 
   background-color: var(--clr-black);
 
-  animation: wrapper-active .2s linear forwards;
+  animation: wrapper-active 0.2s linear forwards;
 }
 
 .hamburger-content {
@@ -204,16 +186,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+
   width: 100vw;
   height: calc(100% - var(--nav-height));
   max-height: calc(600px - var(--nav-height));
-  
+
   padding-bottom: 5rem;
-  
+
   background-color: var(--clr-black);
-  
-  animation: wrapper-active .2s linear forwards;
+
+  animation: wrapper-active 0.2s linear forwards;
 }
 
 .hamburger-link {
