add styling on email form

--- a/src/styles/emailform.css
+++ b/src/styles/emailform.css
@@ -6,7 +6,7 @@
   align-items: center;
 
   width: 100%;
-  height: 100%;
+  height: calc(100vh - var(--nav-height));
   /* min-height: 650px; */
 }
 
@@ -131,6 +131,11 @@
     padding: 0 1rem;
   }
 
+  .form-h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
   .input-text,
   .input-calculate {
     height: 1.5rem;
@@ -140,9 +145,12 @@
   .input-msg,
   .input-calculate {
     margin: 0.5rem 0;
+    font-size: 0.9rem;
   }
 
   .input-submit {
-    margin-top: 0.5rem;
+    font-size: 0.9rem;
+
+    margin-top: 0;
   }
 }
