--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -94,41 +94,15 @@
 
   margin: 0 1vmax;
 
-  transition: all 0.15s ease;
+  transition: all 0.4s ease;
 }
 
 .hamburger-btn:hover {
   background-color: var(--clr-brown);
 }
 
-@keyframes bouncy {
-  0% {
-    transform: scale(1) translateX(0);
-  }
-  5% {
-    transform: scale(1.15) translateX(15%);
-  }
-  10% {
-    transform: scale(0.85) translateX(-15%);
-  }
-  20% {
-    transform: scale(1.1) translateX(10%);
-  }
-  30% {
-    transform: scale(0.9) translateX(-10%);
-  }
-  40% {
-    transform: scale(1.05) translateX(5%);
-  }
-  50% {
-    transform: scale(0.95) translateX(-5%);
-  }
-  65% {
-    transform: scale(1.02) translateX(2%);
-  }
-  85% {
-    transform: scale(0.98) translateX(-2%);
-  }
+.active-hamburger {
+  transform: rotate(270deg);
 }
 
 .hamburger-bar {
@@ -140,7 +114,7 @@
   width: 30px;
   height: 4px;
 
-  transition: all 0.2s ease;
+  transition: all 0.4s ease;
 }
 
 .bar-top {
@@ -158,7 +132,8 @@
 
 .active-mid {
   background-color: transparent;
-  transform: translateX(48px);
+  width: 0px;
+  /* transform: translateX(48px); */
 }
 
 .active-bottom {
@@ -169,16 +144,17 @@
 .hamburger-wrapper {
   position: absolute;
   top: var(--nav-height);
-  left: 0;
-  right: 0;
+  /* left: 0;
+  right: 0; */
 
-  width: 100vw;
   height: calc(100vh - var(--nav-height));
   padding-top: 1rem;
 
+  overflow: hidden;
+
   background-color: var(--clr-black);
 
-  animation: wrapper-active 0.2s linear forwards;
+  animation: wrapper-active 0.3s ease forwards;
 }
 
 .hamburger-content {
@@ -195,7 +171,7 @@
 
   background-color: var(--clr-black);
 
-  animation: wrapper-active 0.2s linear forwards;
+  animation: wrapper-active 0.3s ease forwards;
 }
 
 .hamburger-link {
@@ -205,8 +181,14 @@
 @keyframes wrapper-active {
   from {
     opacity: 0;
+    width: 0px;
+
+    right: -100vw;
   }
   to {
     opacity: 1;
+    width: 100vw;
+
+    right: 0;
   }
 }
