--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -46,12 +46,25 @@
   height: 100%;
 
   padding: 0 1.5vmax;
+
+  position: relative;
 }
 
-.nav-list-link:hover {
-  color: var(--clr-white);
-  text-decoration: underline 2px solid var(--clr-white);
-  text-underline-offset: 8px;
+.nav-list-link::before {
+  content: '';
+  position: absolute;
+  width: 80%;
+  height: 2px;
+  bottom: 1rem;
+  background-color: var(--clr-white);
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.nav-list-link:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 .nav-lang-btn {
@@ -94,7 +107,7 @@
 
   margin: 0 1vmax;
 
-  transition: all 0.4s ease;
+  transition: all 0.5s ease;
 }
 
 .hamburger-btn:hover {
@@ -129,7 +142,7 @@
   transform: rotate(-45deg);
   top: 22px;
 
-  animation: burger-bar 0.7s ease forwards;
+  animation: burger-bar 0.8s ease forwards;
 }
 
 .active-mid {
@@ -142,7 +155,7 @@
   transform: rotate(45deg);
   bottom: 22px;
 
-  animation: burger-bar 0.7s ease forwards;
+  animation: burger-bar 0.8s ease forwards;
 }
 
 .hamburger-wrapper {
@@ -158,7 +171,7 @@
 
   background-color: var(--clr-black);
 
-  animation: wrapper-active 0.3s ease forwards;
+  animation: wrapper-active 0.4s ease forwards;
 }
 
 .hamburger-content {
@@ -175,11 +188,28 @@
 
   background-color: var(--clr-black);
 
-  animation: wrapper-active 0.3s ease forwards;
+  animation: wrapper-active 0.4s ease forwards;
 }
 
 .hamburger-link {
-  width: 100vw !important;
+  width: 100% !important;
+}
+
+.hamburger-link::before {
+  content: '';
+  position: absolute;
+  width: 30%;
+  height: 2px;
+  bottom: 1.5rem;
+  background-color: var(--clr-white);
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.hamburger-link:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 @keyframes wrapper-active {
