update increase luminance on clr-brown

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -5,7 +5,7 @@
 
   /* Colors */
   --clr-black: #141115;
-  --clr-brown: #2b242d;
+  --clr-brown: #352e37;
   --clr-white: #f4eded;
   --clr-green-dark: #254a4a;
   --clr-green-light: #36827f;
