--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import './constants.css';
+@import './constants.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;400;600;800&display=swap');
 
