--- a/src/styles/layouts/nav.scss
+++ b/src/styles/layouts/nav.scss
@@ -30,8 +30,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-
-  height: 100%;
 }
 
 .nav-list-link {
@@ -40,27 +38,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
 
   padding: 0 1.5vmax;
 
   position: relative;
 }
 
-.nav-list-link::before {
-  content: '';
-  position: absolute;
-  width: 80%;
-  height: 2px;
-  bottom: 1rem;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.2s ease-in-out 0s;
+.nav-list-text {
+  padding: 0.25rem;
+
+  background-size: 0% 2px;
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+
+  transition: all 0.3s ease;
 }
 
-.nav-list-link:hover::before {
-  visibility: visible;
-  transform: scaleX(1);
+.nav-list-link:hover {
+  .nav-list-text {
+    background-size: 100% 2px;
+  }
 }
 
 .nav-lang-btn {
@@ -78,8 +75,17 @@
   transition: all 0.15s ease;
 }
 
-.nav-lang-btn-hamburger {
-  margin-top: 5vh;
+.nav-theme-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+
+  padding: 0 1.5vmin;
+  border-radius: 15px;
+
+  cursor: pointer;
+
+  transition: all 0.15s ease;
 }
 
 .hamburger-btn {
@@ -160,14 +166,11 @@
 .hamburger-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 
   width: 100vw;
   height: calc(100% - var(--nav-height));
-  max-height: calc(600px - var(--nav-height));
-
-  padding-bottom: 5rem;
 
   animation: wrapper-active 0.4s ease forwards;
 }
@@ -176,20 +179,13 @@
   width: 100% !important;
 }
 
-.hamburger-link::before {
-  content: '';
-  position: absolute;
-  width: 30%;
-  height: 2px;
-  bottom: 1.5rem;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.2s ease-in-out 0s;
+.nav-site-options {
+  display: flex;
+  padding-right: 1.5vmax;
 }
 
-.hamburger-link:hover::before {
-  visibility: visible;
-  transform: scaleX(1);
+.nav-site-options button:last-child {
+  margin-left: 1.5vmax;
 }
 
 @keyframes wrapper-active {
