init sass util class support

--- a/src/styles/layouts/emailform.scss
+++ b/src/styles/layouts/emailform.scss
@@ -30,6 +30,7 @@
 
   cursor: pointer;
 
+  outline: none;
   border: none;
   border-radius: 25px;
 
@@ -90,6 +91,7 @@
 
   cursor: pointer;
 
+  outline: none;
   border: none;
   border-radius: 25px;
 
