update sass minor changes

--- a/src/styles/colors/darkTheme.scss
+++ b/src/styles/colors/darkTheme.scss
@@ -10,6 +10,7 @@ $clr-accent-light: #f46036;
 $clr-accent-dark: #e93c0c;
 
 .theme-dark {
+  background-color: $clr-bg-primary;
   color: $clr-text-primary;
 
   /* UTILS */
