--- a/src/styles/colors/lightTheme.scss
+++ b/src/styles/colors/lightTheme.scss
@@ -12,6 +12,7 @@ $clr-disabled-btn: #f46036;
 $clr-enabled-btn: #e93c0c;
 
 .theme-light {
+  background-color: $clr-bg-primary;
   color: $clr-text-primary;
 
   /* UTILS */
