--- a/src/styles/colors/palettes.scss
+++ b/src/styles/colors/palettes.scss
@@ -1,3 +1,4 @@
+/* DARK THEME */
 $clr-bg-primary: #141115;
 $clr-bg-secondary: #352e37;
 $clr-text-primary: #f4eded;
@@ -7,3 +8,12 @@ $clr-purple: #a288a6;
 $clr-yellow: #f9db6d;
 $clr-accent-light: #f46036;
 $clr-accent-dark: #e93c0c;
+
+/* LIGHT THEME */
+$light-theme-black: #2b242d;
+$light-theme-white: #f4eded;
+$light-theme-pink: #e0cccc;
+$light-theme-redLight: #dc4151;
+$light-theme-redDark: #cf2637;
+$light-theme-blueLight: #afbae9;
+$light-theme-blueDark: #6b7fd7;
