--- a/src/styles/layouts/home.scss
+++ b/src/styles/layouts/home.scss
@@ -11,12 +11,104 @@
 }
 
 .hero-intro {
+  display: flex;
+
   font-size: 2rem;
   font-weight: 400;
 
   margin-bottom: 0.5rem;
 
   transition: all 0.2s ease;
+
+  .hero-emoji {
+    display: inline-block;
+    margin-left: 1rem;
+
+    font-size: 1.9rem;
+
+    color: transparent;
+    transform: scale(0);
+
+    .hero-emoji-question-one,
+    .hero-emoji-question-two,
+    .hero-emoji-aha {
+      font-size: 0.75rem;
+      color: transparent;
+
+      position: absolute;
+
+      animation: emoji-pops 8s ease infinite;
+    }
+
+    .hero-emoji-question-one {
+      top: -0.25rem;
+      left: -0.25rem;
+
+      transform: rotate(-45deg);
+
+      animation-delay: 1s;
+    }
+
+    .hero-emoji-question-two {
+      top: 0;
+      right: -0.2rem;
+
+      transform: rotate(45deg);
+
+      animation-delay: 3s;
+    }
+
+    .hero-emoji-aha {
+      top: -0.5rem;
+      left: 0.25rem;
+      right: 0;
+
+      animation-delay: 5s;
+    }
+  }
+
+  &:hover {
+    .hero-emoji {
+      animation: emoji-hover-anim 1s ease forwards;
+    }
+  }
+}
+
+@keyframes emoji-hover-anim {
+  0% {
+    color: inherit;
+  }
+  15% {
+    transform: scale(1.3) translateY(-10%) rotate(360deg);
+  }
+  30% {
+    transform: scale(0.75) rotate(360deg);
+  }
+  50% {
+    transform: scale(1.1) rotate(360deg);
+  }
+  75% {
+    transform: scale(0.9) rotate(360deg);
+  }
+  100% {
+    color: inherit;
+    transform: scale(1) rotate(360deg);
+  }
+}
+
+@keyframes emoji-pops {
+  0% {
+    color: transparent;
+  }
+  20% {
+    color: inherit;
+  }
+  30% {
+    color: transparent;
+  }
+  100% {
+    color: transparent;
+  }
 }
 
 .hero-header {
@@ -70,6 +162,8 @@
     font-size: 7vmin;
 
     margin-bottom: 0.5rem;
+
+    line-height: 1;
   }
 
   .hero-header {
@@ -78,6 +172,8 @@
     max-width: 250px;
 
     margin-bottom: 0.5rem;
+
+    line-height: 1;
   }
 
   .hero-presentation {
