--- a/src/styles/layouts/about.scss
+++ b/src/styles/layouts/about.scss
@@ -15,32 +15,42 @@
     height: 100%;
     width: 100%;
 
-    .about-header {
-      font-size: 2rem;
-      font-weight: 800;
+    .about-body-cell {
+      margin-bottom: 3rem;
 
-      margin: 0.5rem 0;
-    }
+      .about-header {
+        font-size: 3rem;
+        font-weight: 800;
 
-    .about-paragraph {
-      font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+      }
 
-      max-width: 650px;
-    }
+      .about-paragraph {
+        font-size: 1.4rem;
 
-    .about-img {
-      float: right;
+        max-width: 650px;
 
-      width: 41%;
-      max-width: 350px;
-      height: auto;
+        margin-bottom: 1rem;
+      }
 
-      margin-top: 0.25rem;
-      margin-left: 0.5rem;
+      .about-img {
+        float: right;
+        transform: rotate(10deg);
 
-      border-radius: 10px;
+        width: 41%;
+        max-width: 350px;
+        height: auto;
 
-      /* box-shadow: -5px 5px 0px pink; */
+        margin-top: 0.25rem;
+        margin-left: 2rem;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+
+        border-radius: 10px;
+        border: 4px solid white;
+
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+      }
     }
   }
 }
