--- a/src/styles/layouts/footer.scss
+++ b/src/styles/layouts/footer.scss
@@ -62,6 +62,20 @@
       &.cell-3 {
         align-items: flex-end;
       }
+
+      .footer-link {
+        padding: 0.25rem 0.25rem;
+
+        background-size: 0% 1px;
+        background-position: 50% 100%;
+        background-repeat: no-repeat;
+
+        transition: all 0.2s ease;
+
+        &:hover {
+          background-size: 100% 1px;
+        }
+      }
     }
   }
 }
