--- a/src/styles/layouts/about.scss
+++ b/src/styles/layouts/about.scss
@@ -60,8 +60,14 @@
     display: flex;
     flex-direction: column;
 
+    .about-header {
+      text-align: center !important;
+
+      width: 100%;
+    }
+
     .about-paragraph {
-      font-size: 6vmin !important;
+      font-size: 5.8vmin !important;
     }
 
     .about-img {
