--- a/src/styles/layouts/footer.scss
+++ b/src/styles/layouts/footer.scss
@@ -81,9 +81,13 @@
 }
 
 @media screen and (max-width: 650px) {
+  .footer-container {
+    flex-direction: column-reverse !important;
+  }
+
   .footer-bottom {
     display: flex;
-    flex-direction: column !important;
+    flex-direction: column-reverse !important;
     justify-content: center;
     align-items: center;
 
@@ -98,11 +102,14 @@
   }
 
   .footer-top {
-    flex-direction: column !important;
+    /* flex-direction: column !important; */
 
     .theme-container,
     .lang-container {
       margin: 0.25rem 0 !important;
+
+      width: 100%;
+      justify-content: center;
     }
   }
 }
