update email form

--- a/src/styles/colors/darkTheme.scss
+++ b/src/styles/colors/darkTheme.scss
@@ -85,7 +85,7 @@ $clr-accent-dark: #e93c0c;
   /* CONTACT > EMAIL FORM */
 
   .input-submit,
-  .send-another-btn {
+  .ok-btn {
     &:enabled {
       background-color: $clr-tertiary-light;
       &:hover {
