--- a/src/styles/layouts/about.scss
+++ b/src/styles/layouts/about.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
 
     .about-body-cell {
       margin-bottom: 3rem;
