--- a/src/styles/layouts/emailform.scss
+++ b/src/styles/layouts/emailform.scss
@@ -117,6 +117,14 @@
     padding: 0 1rem;
   }
 
+  .msg-sent-wrapper {
+    text-align: center;
+
+    .msg-sent-prompt {
+      font-size: 1.3rem;
+    }
+  }
+
   .form-h1 {
     font-size: 1.5rem;
     font-weight: 600;
