--- a/src/styles/layouts/emailform.scss
+++ b/src/styles/layouts/emailform.scss
@@ -3,7 +3,7 @@
 .form-wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
   width: 100%;
   height: calc(100vh - var(--nav-height));
