--- a/src/styles/layouts/home.scss
+++ b/src/styles/layouts/home.scss
@@ -1,5 +1,18 @@
 @import './constants.scss';
 
+.anim-fade-in {
+  animation: anim-fade-in 3s ease forwards;
+}
+
+@keyframes anim-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .hero {
   display: flex;
   flex-direction: column;
